fixed width and overflow issues

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,3 +3,7 @@
 * {
   font-family: 'Nanum Gothic', sans-serif;
 }
+
+body {
+  margin: 0;
+}
